--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import "tailwindcss";
 
 :root {
   --color-primary: #1c597c;
@@ -6,6 +7,7 @@
   --color-primary-extra-light: #55b0db;
   --color-secondary: #c4e2f3;
   --color-light: #f2f9fd;
+  --color-bg-button: #5B8399;
 }
 
 * {
@@ -20,4 +22,9 @@ body {
   color: #000;
   line-height: 1.5;
   font-size: 16px;
+}
+
+h2, h3 {
+  font-weight: 400;
+  color: var(--color-primary);
 }
