--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,14 @@ h2, h3 {
   font-weight: 400;
   color: var(--color-primary);
 }
+
+/* Hide number input arrows */
+.no-spinner::-webkit-inner-spin-button,
+.no-spinner::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.no-spinner {
+  -moz-appearance: textfield; /* Firefox */
+}
