--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,10 @@ body {
   font-size: 16px;
 }
 
+span {
+  font-family: 'Poppins', sans-serif;
+}
+
 h2, h3 {
   font-weight: 400;
   color: var(--color-primary);
